--- a/suppliers.html
+++ b/suppliers.html
@@ -46,6 +46,17 @@
             font-weight: 500;
             margin-top: 12px;
         }
+    @media (max-width: 768px) {
+        .supplier-grid {
+            grid-template-columns: 1fr;
+        }
+        .supplier-card p{
+            text-align: start;
+        }
+        .panel p{
+        text-align: center;
+        color:#2C2F36  }
+    }
     </style>
 </head>
 
